finalize the module

--- a/assets/sass/_services_persons.sass
+++ b/assets/sass/_services_persons.sass
@@ -1,5 +1,7 @@
 // Components
+@import "components/services_person"
 @import "components/services_persons"
 
 // Pages
+@import "pages/services_person"
 @import "pages/services_persons"
