--- a/assets/sass/components/_services_persons.sass
+++ b/assets/sass/components/_services_persons.sass
@@ -1,4 +1,4 @@
-div.services_persons
+.services_persons
     --bs-gutter-y: calc(#{$global-spacing} / 2)
     @extend .row 
     @extend .row-cols-1
