--- a/layouts/partials/services_persons/item.html
+++ b/layouts/partials/services_persons/item.html
@@ -4,6 +4,6 @@
   itemtype="https://schema.org/Person"
   {{ partial "func/SetAnim" (dict "element" "item") }}
 >
-  {{ partial "authors/item/content" . }}
-  {{ partial "authors/item/media" . }}
+  {{ partial "services_persons/item/content" . }}
+  {{ partial "services_persons/item/media" . }}
 </article>
