--- a/layouts/partials/services_persons/paginator.html
+++ b/layouts/partials/services_persons/paginator.html
@@ -1,10 +1,6 @@
 {{ $paginator := .Paginator.Pages }} {{ $atf := true }}
-{{ if partial
-  "func/HasImageHero" .
-}}
+{{ if partial "func/HasImageHero" . }}
   {{ $atf = false }}
 {{ end }}
-{{ partial
-  "services_persons/items" (dict "pages" $paginator "abovethefold" $atf)
-}}
+{{ partial "services_persons/items" (dict "pages" $paginator "abovethefold" $atf) }}
 {{ partial "nav/pagination.html" . }}
