--- a/layouts/services_persons/list.html
+++ b/layouts/services_persons/list.html
@@ -1,10 +1,8 @@
-{{ define "hero" }}{{- partial "services_persons/hero" . -}}{{ end }}
-{{ define
-  "main"
-}}
+{{ define "hero" }}
+  {{- partial "services_persons/hero" . -}}
+{{ end }}
+{{ define "main" }}
   {{ partial "services_persons/schema" . }}
-  {{ partial
-    "services_persons/blocks" .
-  }}
+  {{ partial "services_persons/blocks" . }}
   {{ partial "services_persons/container" . }}
 {{ end }}
