--- a/layouts/partials/persons/services.html
+++ b/layouts/partials/persons/services.html
@@ -1,4 +1,4 @@
 {{ partial "commons/latest-pages-by-taxonomy" (dict "section" "services"
   "taxonomy" "services_persons" "limit" 3 "name" .Title "filename"
-  .File.BaseFileName)
+  .File.TranslationBaseName)
 }}
