--- a/layouts/partials/services_persons/item.html
+++ b/layouts/partials/services_persons/item.html
@@ -2,7 +2,7 @@
   class="person services_persons"
   itemscope
   itemtype="https://schema.org/Person"
-  {{ partial "func/SetAnim" (dict "element" "item") }}
+  {{ partial "func/SetAnim.html" (dict "element" "item") }}
 >
   {{ partial "services_persons/item/content" . }}
   {{ partial "services_persons/item/media" . }}
