--- a/layouts/partials/services_persons/paginator.html
+++ b/layouts/partials/services_persons/paginator.html
@@ -1,5 +1,5 @@
 {{ $paginator := .Paginator.Pages }} {{ $atf := true }}
-{{ if partial "func/HasImageHero" . }}
+{{ if partial "func/HasImageHero.html" . }}
   {{ $atf = false }}
 {{ end }}
 {{ partial "services_persons/items" (dict "pages" $paginator "abovethefold" $atf) }}
