--- a/layouts/services_persons/list.html
+++ b/layouts/services_persons/list.html
@@ -1,8 +1,8 @@
 {{ define "hero" }}
-  {{- partial "services_persons/hero" . -}}
+  {{- partial "services_persons/hero.html" . -}}
 {{ end }}
 {{ define "main" }}
-  {{ partial "services_persons/schema" . }}
-  {{ partial "services_persons/blocks" . }}
-  {{ partial "services_persons/container" . }}
+  {{ partial "services_persons/schema.html" . }}
+  {{ partial "services_persons/blocks.html" . }}
+  {{ partial "services_persons/container.html" . }}
 {{ end }}
