--- a/layouts/services_persons/term.html
+++ b/layouts/services_persons/term.html
@@ -1,7 +1,7 @@
 {{ define "hero" }}
-  {{- partial "services_persons/hero-single" . -}}
+  {{- partial "services_persons/hero-single.html" . -}}
 {{ end }}
 {{ define "main" }}
-  {{ partial "services_persons/schema-single" . }}
-  {{ partial "services_persons/container-single" . }}
+  {{ partial "services_persons/schema-single.html" . }}
+  {{ partial "services_persons/container-single.html" . }}
 {{ end }}
