--- a/layouts/partials/services_persons/container.html
+++ b/layouts/partials/services_persons/container.html
@@ -1,4 +1,4 @@
 <div class="container">
-  {{ partial "services_persons/heading" . }}
-  {{ partial "services_persons/paginator" . }}
+  {{ partial "services_persons/heading.html" . }}
+  {{ partial "services_persons/paginator.html" . }}
 </div>
